Changed vmdir compilation so that we can compile unit-tests
The server/vmdir directory is now compiled as a library instead of binary. The main file has been moved to a different
folder and is compiled as a binary.
Added a simple unit test for replication v2.

Change-Id: I3cd02e993870a29b53ce2427958f84c371fbbff8

--- a/configure.ac
+++ b/configure.ac
@@ -1675,6 +1675,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/server/clusterstate/Makefile
                  vmdir/server/saslvmdirdb/Makefile
                  vmdir/server/vmdir/Makefile
+                 vmdir/server/main/Makefile
                  vmdir/client/Makefile
                  vmdir/config/vmdir.reg
                  vmdir/testing/Makefile
@@ -1724,6 +1725,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/unit-tests/Makefile
                  vmdir/unit-tests/server/Makefile
                  vmdir/unit-tests/server/common/Makefile
+                 vmdir/unit-tests/server/replication2/Makefile
                  vmdns/Makefile
                  vmdns/include/Makefile
                  vmdns/include/public/Makefile
