New Rest Server for VMCA
- This commit implements part of the new rest server for VMCA
  which will be used by the new V2 Rest APIs
- This new resthead is currently not initialized, since the implementation
  is still in progress (will be completed in future commits)
- This is created using the new folder structure
- The existing rest server in the old folder structure is unchanged

TODO in upcoming commits:
- Initialize SSL Context before starting the Rest server
- Add authtoken validation
- Add the skeleton for all the new APIs
- Implement the APIs

Change-Id: Ib80af49ad3e8eb618a39e8b2bfd1d6297aff8a18

--- a/configure.ac
+++ b/configure.ac
@@ -162,6 +162,27 @@ fi
 AM_CONDITIONAL(REST_ENABLED, [$REST_ENABLED])
 
 #--------------------------------------------------------------------
+# v2 rest head flag
+
+REST_V2_ENABLED=false
+AC_ARG_ENABLE([restv2],
+    [AC_HELP_STRING([--enable-rest-v2],
+                    [enable v2 rest heads (default: disabled)])],
+    [
+        if test x"$enableval" = x"yes"
+        then
+            REST_V2_ENABLED=true
+        fi
+    ])
+
+if $REST_V2_ENABLED
+then
+AC_DEFINE_UNQUOTED(REST_V2_ENABLED, 1, [ Enable v2 rest heads ])
+fi
+
+AM_CONDITIONAL(REST_V2_ENABLED, [$REST_V2_ENABLED])
+
+#--------------------------------------------------------------------
 # datastore flag
 
 AC_ARG_WITH([datastore],
@@ -1789,6 +1810,7 @@ AC_CONFIG_FILES([Makefile
                  vmca/service/Makefile
                  vmca/service/common/Makefile
                  vmca/service/config/Makefile
+                 vmca/service/rest-head/Makefile
                  vmca/client/Makefile
                  vmca/vmcadb/Makefile
                  vmca/certool/Makefile
