VMCA Config File Module
Module used to read, parse, and extract configurations for various VMCA
layers.

With future design, VMCA will use single config file to control behavior
of various modules (authz, policy, storage, etc.).  This config file
format minimizes the number of configs that need to be stored.

This change adds a module to handle the loading, parsing, and some
utility functions to extract configs for a particular key.  For example,
with this library, we can make calls in the initialization function to
retrieve configs for various components of VMCA, using the
`VMCAConfigGetComponent()`, and pass that component's config to its
initialization function.  Then, the component's initialization function
can use the `VMCAConfigGetStringParameter()` function to retrieve
individual parameter values.

Currently, if there is no config file on the host, VMCA will log it and
start up like normal.

VMCA Service Config APIs:

    * VMCAConfigLoadFile -- Loads a JSON file from disk and creates the
    JANSSON json_t structure
    * VMCAConfigGetComponent -- Retrieves a JSON object for a specified
    key.  This is used when getting a particular modules config
    * VMCAConfigGetStringParameter -- Retrieves a string value from a
    specified key

Example config:

```
{
    "module1": {
        "param1": "val1",
        "param2": "val2"
    },
    "module2": {
        "param1": {
                "param1_obj1": "val1",
                "param1_obj2": "val2"
        },
        "param2": {
                "param2_obj1": "val1",
                "param2_obj2": "val2"
        }
    }
}
```

Testing:

    * Unit tests
    * No config file on host, started VMCA successfully
    * Config file on host, started VMCA successfully.  Config not used
    for anything
    * Valgrind to ensure no memory and FD leaks

Jira ID: CNA-1971

Change-Id: I86a5fb95c77f5c2d5f4a9f886375e91255b3def3

--- a/configure.ac
+++ b/configure.ac
@@ -1788,6 +1788,7 @@ AC_CONFIG_FILES([Makefile
                  vmca/common/Makefile
                  vmca/service/Makefile
                  vmca/service/common/Makefile
+                 vmca/service/config/Makefile
                  vmca/client/Makefile
                  vmca/vmcadb/Makefile
                  vmca/certool/Makefile
