--- a/vmca/unit-tests/service/common/Makefile.am
+++ b/vmca/unit-tests/service/common/Makefile.am
@@ -1,28 +1,31 @@
-bin_PROGRAMS = policy
+bin_PROGRAMS = vmcasrvcommon
 
-check_PROGRAMS = policy
-TESTS = policy
+check_PROGRAMS = vmcasrvcommon
+TESTS = vmcasrvcommon
 
 SUBDIRS = \
     test-policy-configs
 
-policy_SOURCES = \
+vmcasrvcommon_SOURCES = \
+	jsonutils.c \
     main.c \
     policy.c
 
-policy_CPPFLAGS = \
+vmcasrvcommon_CPPFLAGS = \
     -I$(top_srcdir)/vmca/include \
     -I$(top_srcdir)/vmca/include/public \
     -I$(top_srcdir)/vmca/service/include \
     -I$(top_srcdir)/vmca/service/common \
+    -I$(top_srcdir)/vmca/service/config \
     -I$(top_srcdir)/vmafd/include/public \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@ \
     @JANSSON_INCLUDES@
 
-policy_LDADD = \
+vmcasrvcommon_LDADD = \
     $(top_builddir)/vmca/service/common/libvmcasrvcommon.la \
+    $(top_builddir)/vmca/service/config/libvmcasrvconfig.la \
     $(top_builddir)/vmca/common/libcommon.la \
     $(top_builddir)/vmafd/client/libvmafdclient.la \
     @DCERPC_LIBS@ \
@@ -30,7 +33,7 @@ policy_LDADD = \
     @JANSSON_LIBS@ \
     @CMOCKA_LIBS@
 
-policy_LDFLAGS = \
+vmcasrvcommon_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
     @LW_LDFLAGS@ \
     @JANSSON_LDFLAGS@
