domain join ensure retry on rest/sso errors - address review comments: fix error range
Change-Id: I093d7437a98f54a7355de389a80f27209e0b0810

--- a/vmafd/client/Makefile.am
+++ b/vmafd/client/Makefile.am
@@ -31,6 +31,7 @@ libvmafdclient_la_SOURCES = \
     vecslocalclient.c
 
 libvmafdclient_la_LIBADD = \
+    $(top_builddir)/vmcommon/libvmcommon.la \
     @top_builddir@/vmafd/common/libcommon.la \
     @top_builddir@/vmidentity/ssoclients/common/src/libssocommon.la \
     @top_builddir@/vmidentity/ssoclients/oidc/src/libssooidc.la \
