CNA-2215: add attributeIndices clause to schema and legacy cleanup
1. add attributeIndices clause support to vmdir
2. clean up legacy schema in vmdir
   we no longer support legacy PSC 6.5 and before upgrade scenario.
   VMIT has upgraded to per object schema and no longer rely on SUB_SCEHMA_SUB_ENTRY_ID for schema definition.

TEST:
1. single node
1.1. start with default schema
1.2. vdcschema patch-schema-defs with a file Cascade Controller schema (new AT/OC/CR/Indices)

1. two nodes
1.1. start with default schema
1.2. join second node with default schema
1.3. vdcschema patch-schema-defs with a file Cascade Controller schema (new AT/OC/CR/Indices)
1.4. verify schema converge and indices created

1. two nodes
1.1. start with default schema
1.2. join second node with orig + with a file Cascade Controller schema (new AT/OC/CR/Indices)
1.4. verify schema converge and indices created

Change-Id: Ib5ea93169fce31674cd9c065d4e8e2c17275949f

--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -28,6 +28,7 @@ libmiddle_layer_la_SOURCES = \
     replplugin.c \
     sasl.c \
     saslsockbuf.c \
+    schema.c \
     search.c \
     specialsearch.c \
     srputil.c \
