MutentCA -- Multi-Tenanted CA Service
Initial Skeleton for MutentCA.  With this change, MutentCA will build as
a separate rpm, lightwave-mutentca*.rpm.  This RPM installs a standalone
service, MutentCA, which only depends on lightwave-client.  Upon
installation and then startup through lwsm, MutantCA will print a
message saying that the service is started in journald and it will print
a message saying the service has exited upon shutdown.

                                        ..
                             .,;:;,.   ,::::'
                     .....  .::::::::.,::::::; .::::,.
                   .:::::::.,::::::::::::::::;;:::::::.
              ..   .:::::::::::::::::::::::::::::::::;
            ,::::;'.:::::::::::::::::::::::::::::::::'
           ;:::::::::::::::::::::::::::::::::::::::::::'
        .  ;:::::::::::::::::::::::::::::::::::::::::::::.
      .::::,;:::::::::::::::::::::::::::::::::::::::::::::;
      ,::::::::::::::::::::::::;,,,,,,,,,;;:::::::::::::::::.
       ,::::::::::::::::::::;,,,,,;cll:,,,,,;::::::::::::::::'
       .:::::::::::::::::::,,,,;xXMMMMWW0l,,,,;:::::::::::::::'
      .:::::::::::::::::::,,,,:NMMMMK.  cMO,,,,;:::::::::::::::.
     '::::::::::::::::::::,,,,0MMMMMX' .oMMo,,,,::::::::::::::::
    ':::::::::::::::::::::,,,,KMMMMMMMMMMMMd,,,,::::::::::::::::.
   .::::::::::::::::::::::,,,,lWMMMMMMMMMMX;,,,;::::::::::::::::;
   ::::::::::::::::::::::::,,,,cKMMMMMMMNx;,,,;::::::::::::::::::
  .:::::::::::::::::::::::::;,,,,;ldxxdc,,,,,;:::::::::::::::::::
  .:::::::::::::::::::::::::::;,,,,,,,,,,,;;:::::::::::::::::::::
   :::::::::::::::::::::::::::::::;;;;;:::::::::::::::::::::::::;
   ;::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::'
   .:::::::::::::::::::::c::::::::::::::::::::::::ccc:::::::::::.
    :::::::::::::::::::::ccccc:::::::::::::::::ccccc:::::::::::;
    .::::::::::::::::::::::::cc::cccccccc:;;,cccc::::::::::::::.
     ,:::::::::::::::::::::::::    '.   .   .:::::::::::::::::'
      ;::::::::::::::::::::::

--- a/config/scripts/Makefile.am
+++ b/config/scripts/Makefile.am
@@ -13,6 +13,7 @@ scriptsconf_SCRIPTS = \
  setfirewallrules.py \
  lw-firewall-server.json \
  lw-firewall-post.json \
+ lw-firewall-mutentca.json \
  lw-firewall-client.json \
  lightwave-syslog-logrotate.conf
 
