vmca security plugin interface. - address review feedback (iter 3) - add handle and modify apis to not assume base64 strings - revise interface to provide high level apis - introduce capability based implementation - provide a way to override missing or existing implementation - unit tests for plugin load/unload/validate/caps.
Change-Id: I3a36b3bb708904e77fd2bee137b315262f28b0ba

--- a/configure.ac
+++ b/configure.ac
@@ -1872,6 +1872,7 @@ AC_CONFIG_FILES([Makefile
                  vmca/unit-tests/service/plugin/test-plugins/testplugin-invalidvtable/Makefile
                  vmca/unit-tests/service/plugin/test-plugins/testplugin-valid/Makefile
                  vmca/unit-tests/service/plugin/test-plugins/testplugin-noentry/Makefile
+                 vmca/unit-tests/service/security/Makefile
                  vmca/python/Makefile
                  vmca/jdepends/Makefile
                  vmca/java/Makefile
