Replicationv2 cmocka unit tests
Changes:
    - Fixed all the problems found during unit testing.
    - Cmocka unit tests for replicationv2 algorithm
      I have included the call hierarchy below for better understanding
    - Call hierarchy
          - VmDirReplUpdateListExpand
            (Add, Modify, Delete, Add Tombstone - Done)
                - VmDirReplUpdateSplit
                      - VmDirReplUpdateToUSNList (Done)
                            - VmDirMergeSort (Done)
                - VmDirReplUpdateLocalUsn (Done)
                - VmDirReplUpdateExtractEvent
                       - VmDirExtractEventAttributeChanges (Basic Unit tests - Done)
                       - VmDirExtractEventAttributeValueChanges (Basic Unit tests - Done)
                       - VmDirExtractEventPopulateMustAttributes (Basic Unit tests - Done)
                       - VmDirExtractEventPopulateOperationAttributes (Basic Unit tests - Done)
                - VmDirSortedLinkedListInsert (Done)

Testing:
    - Verified all tests succeeded.
    - Verified vmdir build succeeded with and without ReplicationV2 flag.

Change-Id: I5fc54222ac1d3c6d3f979b5c9412dfda6aa81004

--- a/vmdir/unit-tests/server/replication2/Makefile.am
+++ b/vmdir/unit-tests/server/replication2/Makefile.am
@@ -6,8 +6,10 @@ check_PROGRAMS = replication2
 TESTS = replication2
 
 replication2_SOURCES = \
-    main.c \
     extractevents.c \
+    main.c \
+    mock.c \
+    testcommon.c \
     update.c \
     updatelist.c
 
@@ -76,6 +78,6 @@ replication2_LDADD = \
 
 replication2_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
-    @LW_LDFLAGS@
-
+    @LW_LDFLAGS@ \
+    -Wl,--wrap,VmDirEntryGetAllMustAttrs
 endif
