Rest API Swagger file for Multi Tenant CA
Jira ID: CNA-1953
- This commit contains the json swagger file which will be used
  to host REST HTTPS server on mutentca

Change-Id: Icc6f116a91d365e3b1c9dcfeac748df4f7074724

--- a/mutentca/config/Makefile.am
+++ b/mutentca/config/Makefile.am
@@ -1,4 +1,5 @@
 mutentcaconf_DATA = \
     mutentca.reg  \
     mutentcad-syslog-ng.conf \
-    mutentca-telegraf.conf
+    mutentca-telegraf.conf \
+    mutentca-rest.json
