Integration Test Framework for Multi Tenant CA
JIRA ID: CNA-1976

Details:
- This includes the complete integration test framework which will be
  used to test multi tenant CA REST APIs
- The test for GET CA Version API has been implemented along with the
  placeholder for other tests

Steps to Run the Test:
- Before running the tests, swagger generator needs to be run by using
  the command "hmake -b gen-mutentca-tests"
- After this, tests can be performed manually using the below command:
  ./mutentca/tests/integration-tests/go/src/run_tests.sh
  -s LW_ENDPOINT -n MTCA_ENDPOINT -d LW_DOMAIN -u LW_USERNAME -p LW_PASSWORD

Future improvements:
- hmake support will be added in subsequent commits
- This will allow running the tests end-to-end using 1 hmake command
  instead of manually performing the tests
- Tests for each REST API will be added one by one when the APIs are
  ready/implemented

Change-Id: I124f596fb525c8befb58910dc290146427a51676

--- a/support/toolchain/docker/photon2/Dockerfile
+++ b/support/toolchain/docker/photon2/Dockerfile
@@ -50,6 +50,6 @@ RUN tdnf update -qy  tdnf  && \
         sqlite-devel-3.21.0 \
         util-linux-devel-2.29.2 && \
     echo 'ALL ALL=NOPASSWD: ALL' >>/etc/sudoers && \
-    chmod -R o+r /opt/likewise/include
-
-
+    chmod -R o+r /opt/likewise/include && \
+    curl -sSLf https://github.com/go-swagger/go-swagger/releases/download/0.11.0/swagger_linux_amd64 >/usr/local/bin/swagger && \
+    chmod a+rx /usr/local/bin/swagger
