Mutent CA: Implemented storage abstraction layer (part1)
*APIs provided by db layer  will be utilized by other CA modules.
*It supports pluggable interface. It is configured based on config provided to the service.

*Added logic which initialize's and free db context.

Example config file:
{
    "dbPlugin": "dbplugin.so",
    ....
}

Testing:
*Added unit tests to verify if loading a db plugin works.
*Tested for memory leaks

Change-Id: Ia93c027edab5e717cd34921e51bc89efd87021b4

--- a/configure.ac
+++ b/configure.ac
@@ -1887,12 +1887,16 @@ AC_CONFIG_FILES([Makefile
                  mutentca/server/Makefile
                  mutentca/server/common/Makefile
                  mutentca/server/config/Makefile
+                 mutentca/server/db/Makefile
                  mutentca/server/plugin/Makefile
                  mutentca/server/mutentca/Makefile
                  mutentca/tests/Makefile
                  mutentca/tests/unit-tests/Makefile
                  mutentca/tests/unit-tests/server/Makefile
                  mutentca/tests/unit-tests/server/common/Makefile
+                 mutentca/tests/unit-tests/server/db/Makefile
+                 mutentca/tests/unit-tests/server/db/test-mutentcadb-config/Makefile
+                 mutentca/tests/unit-tests/server/db/test-mutentcadb-plugin/Makefile
                  mutentca/tests/unit-tests/server/plugin/Makefile
                  mutentca/tests/unit-tests/server/plugin/test-plugins/Makefile
                  mutentca/tests/unit-tests/server/plugin/test-plugins/testplugin-invalidvtable/Makefile
@@ -1961,6 +1965,10 @@ AC_CONFIG_FILES([Makefile
 
 AC_CONFIG_LINKS([
                 vmca/unit-tests/service/common/test-policy-configs/test-snpolicy-valid.json:vmca/unit-tests/service/common/test-policy-configs/test-snpolicy-valid.json
+                ])
+
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json:mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json
                 ])
 
 AC_OUTPUT
