Mutent CA: Implemented storage abstraction layer (part3)
*Implemented db APIs to store/get CA data and issued certificates data.
-LwCADbAddCA
-LwCADbAddCertData
-LwCADbGetCACertificates
-LwCADbGetCertData
-LwCADbUpdateCA
-LwCADbUpdateCAStatus
-LwCADbUpdateCertData

*Added unit tests for each API
*Verified memcheck

Change-Id: Ie945e1c2dc2dc5b1747c6a5778f39824d6eb7753

--- a/mutentca/tests/unit-tests/server/common/Makefile.am
+++ b/mutentca/tests/unit-tests/server/common/Makefile.am
@@ -5,7 +5,7 @@ TESTS = testmutentcasrvcommon
 
 testmutentcasrvcommon_SOURCES = \
     jsonutils.c \
-    structs.c \
+    utils.c \
     main.c
 
 testmutentcasrvcommon_CPPFLAGS = \
