apply hardening flags to build
Change-Id: Ic49ac3a9fecff35adfb03c6026da17e03d537c6b

--- a/vmafd/tools/vecs-cli/Makefile.am
+++ b/vmafd/tools/vecs-cli/Makefile.am
@@ -9,7 +9,8 @@ vecs_cli_CPPFLAGS = \
     -I$(top_srcdir)/vmafd/include \
     -I$(top_srcdir)/vmafd/include/public \
     @LW_INCLUDES@ \
-    @OPENSSL_INCLUDES@
+    @OPENSSL_INCLUDES@ \
+    -Wno-unused-result
     
 vecs_cli_LDADD = \
     $(top_builddir)/vmafd/client/libvmafdclient.la \
