Disable TLSv1.1 for LDAP
This change disables TLSv1.1 for LDAP so that only
TLSv1.2 is allowed.

PR#2190403

Change-Id: I4571b789543b37118cdb28d6532b8c884c654e29

--- a/lwraft/config/post.reg.in
+++ b/lwraft/config/post.reg.in
@@ -44,7 +44,7 @@
 }
 
 "SslDisabledProtocols" = {
-    default = "TLSv1"
+    default = "TLSv1,TLSv1.1"
     doc     = "List of protocols to disable"
 }
 
