--- a/vmdir/config/vmdir.reg.in
+++ b/vmdir/config/vmdir.reg.in
@@ -82,7 +82,7 @@
     doc     = "Enable Modify DN (renaming). Domain functional level must also be greater than 1."
 }
 "SslDisabledProtocols" = {
-    default = "TLSv1"
+    default = "TLSv1,TLSv1.1"
     doc     = "List of protocols to disable"
 }
 
