Revert "apply hardening flags to build"
This reverts commit 3bd483bc814756ff0ddd8b806a680956d9338f54.

Change-Id: I5e5187c27d012295a6a4c21b246162b1f21fe698

--- a/vmafd/tools/vecs-cli/Makefile.am
+++ b/vmafd/tools/vecs-cli/Makefile.am
@@ -9,8 +9,7 @@ vecs_cli_CPPFLAGS = \
     -I$(top_srcdir)/vmafd/include \
     -I$(top_srcdir)/vmafd/include/public \
     @LW_INCLUDES@ \
-    @OPENSSL_INCLUDES@ \
-    -Wno-unused-result
+    @OPENSSL_INCLUDES@
     
 vecs_cli_LDADD = \
     $(top_builddir)/vmafd/client/libvmafdclient.la \
