--- a/vmdir/gssapi-plugins/unix/Makefile.am
+++ b/vmdir/gssapi-plugins/unix/Makefile.am
@@ -9,8 +9,7 @@ unix_srp_CPPFLAGS = \
    -I$(top_srcdir)/vmdir/include/public \
    -I$(top_srcdir)/vmdir/thirdparty \
    -I$(top_builddir)/vmdir/client \
-    @OPENSSL_INCLUDES@ \
-   -Wno-unused-result
+    @OPENSSL_INCLUDES@
 
 unix_srp_LDADD = \
     $(top_builddir)/vmdir/thirdparty/csrp/libcsrp.la \
@@ -32,8 +31,7 @@ libgssapi_unix_la_CPPFLAGS = \
    -I$(top_srcdir)/vmdir/thirdparty \
    -I$(top_builddir)/vmdir/client \
     @OPENSSL_INCLUDES@ \
-    @LW_INCLUDES@ \
-    -Wno-unused-result
+    @LW_INCLUDES@
 
 libgssapi_unix_la_SOURCES = \
         gssapi_alloc.c \
