--- a/vmdir/tools/vdcrepadmin/Makefile.am
+++ b/vmdir/tools/vdcrepadmin/Makefile.am
@@ -12,8 +12,7 @@ vdcrepadmin_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/tools/include \
     -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
-    @OPENSSL_INCLUDES@ \
-    -Wno-unused-result
+    @OPENSSL_INCLUDES@
 
 vdcrepadmin_LDADD = \
     $(top_builddir)/vmdir/client/libvmdirclient.la \
