Mutent CA: REST Server implementation
Jira ID: CNA-2459

- This commit contains the implementation of the REST server
  which will be used by mutentca
- Helper functions required while implementing the rest apis
  in the future, are also included in this commit

Change-Id: I1eea4ea447b5271f174ab5e4de00909a203ab475

--- a/configure.ac
+++ b/configure.ac
@@ -1891,6 +1891,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/server/config/Makefile
                  mutentca/server/db/Makefile
                  mutentca/server/plugin/Makefile
+                 mutentca/server/rest-head/Makefile
                  mutentca/server/mutentca/Makefile
                  mutentca/tests/Makefile
                  mutentca/tests/unit-tests/Makefile
