Computes HOTK signature in httpclient in vmcommon
This changeset adds the funcationality to compute HOTK signature to
vmcommon. This signature can then be used to set the Authorization
token in the client's request.

Testing:
- The unit tests includes a signature that is expected to be computed by
  specifying a given method, uri, body, private key, and request
  timestamp. If the computed signature do not match, there is an error.

- Using the signature and request parameters mentioned previously, an
  HOTK access token is fetched from the Lightwave server and a simple
  GET request is sent to a DN to see the response.

Change-Id: I76ff8e44248bce737b62d1ed5d2326a51b6d2730

--- a/vmcommon/Makefile.am
+++ b/vmcommon/Makefile.am
@@ -21,6 +21,7 @@ libvmcommon_la_SOURCES = \
     vmjsonresult.c \
     vmmetrics.c \
     vmnetworkutil.c \
+    vmsignature.c \
     vmutil.c
 
 libvmcommon_la_LIBADD = \
