Mutent CA: REST API Swagger definitions
This commit contains the following:
- Changes to swagger file: adding enum to signing algorithm input
- The api definitions (structures) which will be used to collect
  input request body by the resthead
- Functions to collect json body into these structures with its
  corresponding free functions
- Implementations for some common apis defined in mutentcaapi.h
- Modification to jsonutil functions to accept "bOptional" param
- New helper jsonutil function to get string array from key
- New helper jsonutil function to get time from key
- unit tests covering the updates to jsonutil

Jira ID: CNA-1953

Change-Id: I238a27cce57f482936427f3e1c0e5bbeda5a7ddd

--- a/mutentca/server/rest-head/Makefile.am
+++ b/mutentca/server/rest-head/Makefile.am
@@ -6,6 +6,7 @@ libmutentcaresthead_la_SOURCES = \
 if REST_ENABLED
 
 libmutentcaresthead_la_SOURCES += \
+    apiutil.c \
     globals.c \
     handler.c \
     httperror.c \
